<resources>
    <string name="app_name">Covidhelper</string>
    <string name="register_your_shop">Register your vendor! </string>
    <string name="shop_name">Vendor Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="add_a_new_vulnerable_person">Add a new Vulnerable person</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="id">Id</string>
    <string name="FullName">Full Name</string>
    <string name="insert">Insert</string>
    <string name="Address">Address</string>
    <string name="Password">Password</string>
    <string name="Phone">Phone</string>
    <string name="Email">Email</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="id_display">ID : ....</string>
    <string name="full_name_display">Full Name : ....</string>
    <string name="phone_number_display">Phone Number : ....</string>
    <string name="email_display">Email : ....</string>
    <string name="address_display">Address : ....</string>
    <string name="Update">Update</string>
    <string name="log_in">Log in</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="add_person">Add Person</string>
    <string name="sign_up">Sign up</string>
    <string name="user_icon">User icon</string>
    <string name="no_account">Don\'t have an account? Register now!</string>
    <string name="already_have_account">Already have an account? Sign in here!</string>
    <string name="register_as_volunteer">Register as a Volunteer!</string>
    <string name="logo">Logo</string>
    <string name="vendor_or_volunteer">Are You a Vendor or a Volunteer?</string>
    <string name="i_am_a_vendor">I am a Vendor</string>
    <string name="i_am_a_volunteer">I am a Volunteer</string>
    <string name="update_vulnerable_person">Update Vulnerable Person</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="textview">TextView</string>
    <string name="title_activity_navigation_bar">navigation_bar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="more">More</string>
    <string name="notifications">Notifications</string>
    <string name="i_can_deliver">I can deliver!</string>
    <string name="statistics">Statistics</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigationleft">Navigation</string>
    <string name="adduser">Add User</string>
    <string name="open_admin_nav">Open</string>
    <string name="close_admin_nav">Close</string>
    <string name="update_stock">Update Stock</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="closing">Closing</string>
    <string name="opening">Opening</string>
    <string name="select_opening_closing">Please select if you are choosing \nthe opening or closing hours!</string>
    <string name="select_a_day">Select a day and update your program!</string>
    <string name="select_schedule">Select Schedule for your Store!</string>
    <string name="save">Save</string>
    <string name="vulnerable_panel">Vulnerable Panel</string>
    <string name="volunteers_panel">Volunteers Panel</string>
    <string name="stores_panel">Stores Panel</string>
    <string name="admin_interface">Admin Interface</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="submit">SUBMIT</string>
    <string name="admin_user">Admin User</string>
    <string name="update_schedule">Update Schedule</string>
    <string name="update_store_details">Update Store Details</string>
    <string name="account_details">Account Details</string>
    <string name="data_and_permissions">Data and permissions</string>
    <string name="log_out">Log out</string>
    <string name="deactivate">Deactivate your account</string>
    <string name="current">Current</string>
    <string name="neww">New</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_your_new_password">Enter your new password!</string>
    <string name="enter_your_current_password">Enter your current password!</string>
    <string name="add_new_products">Add new products</string>
    <string name="update_existing_products">Update existing products</string>
    <string name="products_in_stock">Products in stock</string>
    <string name="select_quantity">Select quantity</string>
    <string name="number_in_stock">Number in stock</string>
    <string name="product_name">Product name</string>
    <string name="price">Price</string>
    <string name="lei">Lei</string>
    <string name="select_the_price">Select the price</string>
    <string name="specify_the_name_prod">Specify the name of the product</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="percentage">0%</string>
    <string name="report">Report</string>
    <string name="need_help">Need Help</string>
    <string name="offer_help">Offer Help</string>
    <string name="name_of_the_product">Name of the product</string>
    <string name="search_for_a_product">Search for a product</string>
    <string name="new_price">New price</string>
    <string name="new_name_of_the_product">New name of the product</string>
    <string name="new_quantity">New quantity</string>
    <string name="delete">Delete</string>
    <string name="quantity_in_stock">Quantity in stock</string>
</resources>