<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.covidhelper.ui.homeAdmin.HomeFragmentAdmin"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home_admin" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.covidhelper.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.covidhelper.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/createVulPersonFragment"
        android:name="com.example.covidhelper.ui.createVulPerson.CreateVulPersonFragment"
        android:label="createVulPersonFragment" />

    <fragment
        android:id="@+id/notificationsFragment"
        android:name="com.example.covidhelper.ui.notifications.NotificationsFragment"
        android:label="fragment_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.covidhelper.ui.dashboard.DashboardFragment"
        android:label="fragment_dashboard"
        tools:layout="@layout/fragment_dashboard" />
</navigation>